# clad

./: CMakeLists.txt  README.md  clad.sublime-project  index.html  params.json
example/: index.html
example/js/: clad.js  editor.js  main.js
example/js/clad/: Clang.js  Clang_types.js  Diagnostic_types.js  Index_types.js  Location_types.js  TranslationUnit_types.js
src/: CMakeLists.txt  Clad.cpp  ClangHandler.cpp  ClangHandler.h  ClangServ.cpp
src/server/: THttpServer.cpp  THttpTransport.cpp
test/: CMakeLists.txt  diagnostics_test.cpp
thrift/: API.thrift  Clang.thrift  Diagnostic.thrift  File.thrift  Index.thrift  Location.thrift  TranslationUnit.thrift  Types.thrift
